--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body{
     font-family:'Poppins',sans-serif ;
 }
 .cabecalho{
-    blakground: color #ff00dd;
-    color:rgb(250, 250, 250)
+    background-color: #ff00dd;
+    color: white
     display:flex;
     justufi-content:space-around;
     aling-itens: center;
@@ -20,15 +20,15 @@ body{
 
 .cabecalho_lista_iten{
     display:inline block;
-    margin:150px;
+    margin: 100px;
     font-size:100px;
 }
 .sobre_nos{
     background-image: linear-gradient(#bc06ff, #bd06ff85);
     color: #ff0606;
-    display: flex;
+    display:flex;
     justify-content: center;
-    padding: 24px;
+    padding:24px;
 
 }
 .sobre_nos-imagem {
