--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 }
 .sobre_nos{
     background-image: linear-gradient(#bc06ff, #bd06ff85);
-    color: #ff0606;
+    color: #ffffff;
     display:flex;
     justify-content: center;
     padding:24px;
