--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 .sobre_nos-imagem {
     width: 25;
 }.sobre_nos{
-    background-image: linear-gradient(#3B0050,#3b00501f);
+    background-image: linear-gradient(#d56bfc,#840eaf1f);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
