--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
     width: 25%;
 }
 .sobre_nos{
-    background-image: linear-gradient(#3B0050,#3b00501f);
+    background-image: linear-gradient(#c72eff,#3b00501f);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
