--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 /* secao sobre nos*/
 .sobre_nos{
-    background-image: linear-gradient(#3B0050,#3b00501f);
+    background-image: linear-gradient(#bb00ff,#3b00501f);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
@@ -67,7 +67,7 @@ body {
 }
 
 .lojas-titulo{
-color: #3B0050;
+color: #ffffff;
 text-align: center;
 padding: 50px;
 font-size: 45px;
