--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 /* secao cabecalho*/
 .cabecalho {
-    background-color: #3B0050;
+    background-color: #bb00ff;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -36,7 +36,7 @@ body {
 }
 /* secao sobre nos*/
 .sobre_nos{
-    background-image: linear-gradient(#bb00ff,#3b00501f);
+    background-image: linear-gradient(#bb00ff,#d96fff1f);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
@@ -63,7 +63,7 @@ body {
 
 /* secao lojas*/
 .lojas{
-    background-color: #a9a9a9;
+    background-color: #f100f1;
 }
 
 .lojas-titulo{
