--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ font-size: 45px;
 }
 
 .rodape{
-    background-color: black;
+    background-color: rgb(255, 0, 0);
     text-align: center;
     padding: 50px;
     border-top: 2px solid #ffff00b2;
