--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .sobre_nos-imagem{
-    width: 20%;
+    width: 30%;
 }
 
 /* secao lojas*/
@@ -83,7 +83,8 @@ font-size: 45px;
 }
 
 .lojas-estado-img{
-    width: 10px;
+    width: 30px;
+.
 }
 .lojas-estado-nome{
     font-weight: 100;
