--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ font-size: 45px;
     grid-template-columns: 25% 25% 25% 25%;
     font-size: 10px;
     text-align: center;
+    text-decoration: #FFFFFF;
 }
 .loja-estado{
     text-align: center;
