--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 
 /* secao lojas*/
 .lojas{
-    background-image: linear-gradient(#bb00ff,#d96fff1f);
+    background-image: linear-gradient(#d979ff1f,#bb00ff);
     color:#FFFFFF;
     ;
 }
