--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 .lojas-titulo{
-color: #ffffff;
+color: #8d8989;
 text-align: center;
 padding: 30px;
 font-size: 45px;
@@ -85,13 +85,13 @@ font-size: 45px;
 }
 
 .lojas-estados-img{
-    width: 300px;
+    width: 665px;
 
 }
 .lojas-estado-nome{
     font-weight: 100;
     text-decoration: underline;
-    color: #FFFFFF;
+    color: #838282;
 }
 .lojas-estado-nome:hover{
     font-weight: 100;
