--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ font-size: 45px;
 .lojas-estado-nome:hover{
     font-weight: 100;
     text-decoration: underline;
-    color: orange;
+    color: rgb(255, 0, 191);
 }
 .lojas-estado-icone{
     width: 35px;
