--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
 body {
-    font-family: 'Mooli';
+    font-family: 'Mate';
 }
 
 /* secao cabecalho*/
