--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Honk&family=Mate+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Honk&family=Mate+SC&display=swap')
 *{
 
     margin: 0;
     padding: 0;
 }
 body {
-    font-family: 'Mate+SC';
+    font-family: 'Honk';
 }
 
 /* secao cabecalho*/
